Updating various game scenarios

--- a/MontyHall.ipynb
+++ b/MontyHall.ipynb
@@ -170,6 +170,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_both(): # return 0 if the car behind original guess, return 1 if the car is behind the other door\n",
+    "    place = place_car()\n",
+    "    guess_num = make_a_guess()\n",
+    "    goat_door_num = open_one_goat(place, guess_num)\n",
+    "    the_other_door_num = switch_doors(guess_num, goat_door_num)\n",
+    "    if check_the_guess(place, guess_num):\n",
+    "        return 0\n",
+    "    elif check_the_guess(place, the_other_door_num):\n",
+    "        return 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3331572 0.6668428\n"
+     ]
+    }
+   ],
+   "source": [
+    "Noriginal = 0\n",
+    "Nother = 0\n",
+    "for i in range(0,Ngames):\n",
+    "    outcome = play_both()\n",
+    "    if outcome == 0:\n",
+    "        Noriginal += 1\n",
+    "    else:\n",
+    "        Nother += 1\n",
+    "print(Noriginal/Ngames, Nother/Ngames)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
